--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/components/assets/me.jpeg" />
+    <link rel="icon" href="./sylla.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+
+    <!-- boxicons -->
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
       rel="stylesheet"
     />
-    -->
-    <title>Tijani Sylla</title>
+    <!-- unicons -->
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
+    <title>Tijani Sylla (TS)</title>
   </head>
   <body>
-    <script
-      src="https://kit.fontawesome.com/a33530bb41.js"
-      crossorigin="anonymous"
-    ></script>
-
     <div id="root"></div>
   </body>
 </html>
