made more changes

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v3.0.0/css/line.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v3.0.0/css/thinline.css"
+    />
     <title>Tijani Sylla (TS)</title>
   </head>
   <body>
